--- a/popup.html
+++ b/popup.html
@@ -1,8 +1,19 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <title>Popup</title>
+    <style>
+        /* Set the background of the body to black */
+        body {
+            background-color: black;
+            color: white; /* Sets the default text color to white */
+            font-family: 'Arial', sans-serif; /* A nice, commonly used font */
+        }
+        /* Style the h1 element */
+        h1 {
+            font-size: 2em; /* Adjust the font size as needed */
+        }
+    </style>
 </head>
 <body>
     <h1>Techtools</h1>
