--- a/popup.html
+++ b/popup.html
@@ -12,11 +12,21 @@
         /* Style the h1 element */
         h1 {
             font-size: 2em; /* Adjust the font size as needed */
+            margin: 0; /* Adjust margin as needed */
+        }
+        /* Style the link inside the h1 */
+        h1 a {
+            color: white; /* Make the link text white */
+            text-decoration: none; /* Remove the underline from the link */
+        }
+        /* Optional: Add a hover effect for the link */
+        h1 a:hover {
+            text-decoration: underline; /* Adds underline on hover */
         }
     </style>
 </head>
 <body>
-    <h1>Techtools</h1>
+    <h1><a href="https://www.example.com" target="_blank">Techtools</a></h1>
     <script src="popup.js"></script>
 </body>
 </html>
