--- a/popup.html
+++ b/popup.html
@@ -5,24 +5,14 @@
     <style>
         body {
             background-color: black;
-            color: white; /* Sets the default text color to white */
-            font-family: 'Arial', sans-serif; /* A nice, commonly used font */
-        }
-        h1 {
-            font-size: 2em; /* Adjust the font size as needed */
-            margin: 0; /* Adjust margin as needed */
-        }
-        h1 a {
-            color: white; /* Make the link text white */
-            text-decoration: none; /* Remove the underline from the link */
-        }
-        h1 a:hover {
-            text-decoration: underline;
+            color: white;
+            font-family: 'Arial', sans-serif;
         }
     </style>
 </head>
 <body>
     <h1><a href="https://github.com/TaraJura/TrackTools" target="_blank">Techtools</a></h1>
+    <button id="showOverlay">Show Overlay</button>
     <script src="popup.js"></script>
 </body>
 </html>
