--- a/popup.html
+++ b/popup.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Popup</title>
     <style>
         body {
             background-color: black;
             color: white;
             font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+        a {
+            color: white;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
-    <h1><a href="https://github.com/TaraJura/TrackTools" target="_blank">Techtools</a></h1>
+    <h1><a href="https://techtools.cz/" target="_blank">Techtools</a></h1>
     <script src="popup.js"></script>
 </body>
 </html>
