--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <body>
-    <h1><a href="https://techtools.cz/" target="_blank">Techtools</a></h1>
+    <h1><a href="https://techtools.cz/extension/new_user" target="_blank">Techtools</a></h1>
     <p id="userId">User ID: Loading...</p> <!-- Placeholder for the user ID -->
     <script src="popup.js"></script>
 </body>
