--- a/popup.html
+++ b/popup.html
@@ -3,37 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Popup</title>
+    <title>Techtools Extension</title>
     <style>
         body {
-            background-color: black;
+            background: linear-gradient(135deg, #1a1a1a, #2d2d2d);
             color: white;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Segoe UI', 'Arial', sans-serif;
             display: flex;
-            flex-direction: column; /* Align items in a column */
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-width: 300px;
+            min-width: 320px;
+            min-height: 200px;
             margin: 0;
+            padding: 20px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
         }
+
+        .container {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 25px;
+            border-radius: 15px;
+            backdrop-filter: blur(5px);
+            text-align: center;
+            transition: transform 0.2s;
+        }
+
+        .container:hover {
+            transform: scale(1.02);
+        }
+
+        h1 {
+            margin: 0 0 20px 0;
+        }
+
         a {
             color: white;
             text-decoration: none;
-            font-size: 24px; /* Make the link larger */
+            font-size: 28px;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            position: relative;
+            transition: all 0.3s ease;
         }
+
+        a::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            bottom: -5px;
+            left: 0;
+            background: linear-gradient(90deg, #00ff00, #00cc00);
+            transform: scaleX(0);
+            transition: transform 0.3s ease;
+        }
+
         a:hover {
-            text-decoration: underline;
+            text-shadow: 0 0 15px rgba(0, 255, 0, 0.5);
+            text-decoration: none;
         }
+
+        a:hover::after {
+            transform: scaleX(1);
+        }
+
         #userId {
-            color: #0f0; /* Green color for visibility */
-            margin-top: 10px; /* Space out from the link */
-            font-size: 18px; /* Slightly smaller than the link for hierarchy */
+            margin-top: 20px;
+            font-size: 18px;
+            color: #00ff00;
+            padding: 10px 15px;
+            background: rgba(0, 255, 0, 0.1);
+            border-radius: 8px;
+            border: 1px solid rgba(0, 255, 0, 0.2);
+        }
+
+        .loading {
+            position: relative;
+        }
+
+        .loading::after {
+            content: '...';
+            animation: dots 1.5s infinite;
+            position: absolute;
+        }
+
+        @keyframes dots {
+            0%, 20% { content: '.'; }
+            40%, 60% { content: '..'; }
+            80%, 100% { content: '...'; }
         }
     </style>
 </head>
 <body>
-    <h1><a href="https://techtools.cz/users/sign_up" target="_blank">Techtools</a></h1>
-    <p id="userId">User ID: Loading...</p> <!-- Placeholder for the user ID -->
+    <div class="container">
+        <h1><a href="http://localhost:3000" target="_blank">Techtools</a></h1>
+        <div id="userId" class="loading">User ID: Loading</div>
+    </div>
+
     <script src="popup.js"></script>
 </body>
 </html>
