--- a/popup.html
+++ b/popup.html
@@ -1,107 +1,225 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Techtools Extension</title>
-    <style>
-        body {
-            background: linear-gradient(135deg, #1a1a1a, #2d2d2d);
-            color: white;
-            font-family: 'Segoe UI', 'Arial', sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-width: 320px;
-            min-height: 200px;
-            margin: 0;
-            padding: 20px;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-        }
+  <meta charset="UTF-8">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-        .container {
-            background: rgba(255, 255, 255, 0.05);
-            padding: 25px;
-            border-radius: 15px;
-            backdrop-filter: blur(5px);
-            text-align: center;
-            transition: transform 0.2s;
-        }
+    body {
+      width: 320px;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: #1a1a2e;
+      color: #fff;
+    }
 
-        .container:hover {
-            transform: scale(1.02);
-        }
+    .popup-container {
+      padding: 20px;
+    }
 
-        h1 {
-            margin: 0 0 20px 0;
-        }
+    .header {
+      text-align: center;
+      margin-bottom: 20px;
+    }
 
-        a {
-            color: white;
-            text-decoration: none;
-            font-size: 28px;
-            font-weight: bold;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            position: relative;
-            transition: all 0.3s ease;
-        }
+    .header h1 {
+      font-size: 18px;
+      font-weight: 600;
+      background: linear-gradient(135deg, #9c27b0, #4f8cff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
 
-        a::after {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 2px;
-            bottom: -5px;
-            left: 0;
-            background: linear-gradient(90deg, #00ff00, #00cc00);
-            transform: scaleX(0);
-            transition: transform 0.3s ease;
-        }
+    .stats {
+      display: flex;
+      gap: 12px;
+      margin-bottom: 20px;
+    }
 
-        a:hover {
-            text-shadow: 0 0 15px rgba(0, 255, 0, 0.5);
-            text-decoration: none;
-        }
+    .stat {
+      flex: 1;
+      background: #242442;
+      padding: 16px;
+      border-radius: 8px;
+      text-align: center;
+    }
 
-        a:hover::after {
-            transform: scaleX(1);
-        }
+    .stat-value {
+      display: block;
+      font-size: 24px;
+      font-weight: 700;
+      color: #4f8cff;
+    }
 
-        #userId {
-            margin-top: 20px;
-            font-size: 18px;
-            color: #00ff00;
-            padding: 10px 15px;
-            background: rgba(0, 255, 0, 0.1);
-            border-radius: 8px;
-            border: 1px solid rgba(0, 255, 0, 0.2);
-        }
+    .stat-label {
+      font-size: 11px;
+      color: #888;
+      margin-top: 4px;
+    }
 
-        .loading {
-            position: relative;
-        }
+    .user-info {
+      margin-bottom: 20px;
+    }
 
-        .loading::after {
-            content: '...';
-            animation: dots 1.5s infinite;
-            position: absolute;
-        }
+    .user-info label {
+      display: block;
+      font-size: 12px;
+      color: #888;
+      margin-bottom: 6px;
+    }
 
-        @keyframes dots {
-            0%, 20% { content: '.'; }
-            40%, 60% { content: '..'; }
-            80%, 100% { content: '...'; }
-        }
-    </style>
+    .user-info input {
+      width: 100%;
+      padding: 10px;
+      background: #242442;
+      border: 1px solid #3a3a5a;
+      border-radius: 6px;
+      color: #fff;
+      font-size: 11px;
+      margin-bottom: 8px;
+    }
+
+    .user-info button {
+      width: 100%;
+      padding: 8px;
+      background: #3a3a5a;
+      border: none;
+      border-radius: 6px;
+      color: #fff;
+      cursor: pointer;
+      font-size: 12px;
+      transition: background 0.2s;
+    }
+
+    .user-info button:hover {
+      background: #4a4a6a;
+    }
+
+    .actions {
+      margin-bottom: 16px;
+    }
+
+    .btn {
+      display: block;
+      width: 100%;
+      padding: 12px;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: 500;
+      font-size: 14px;
+      margin-bottom: 8px;
+      border: none;
+      cursor: pointer;
+      transition: opacity 0.2s;
+    }
+
+    .btn-primary {
+      background: linear-gradient(135deg, #9c27b0, #4f8cff);
+      color: #fff;
+    }
+
+    .btn-primary:hover {
+      opacity: 0.9;
+    }
+
+    .btn-secondary {
+      background: #242442;
+      color: #fff;
+      border: 1px solid #3a3a5a;
+    }
+
+    .btn-secondary:hover {
+      background: #3a3a5a;
+    }
+
+    .btn-secondary.paused {
+      background: #4a2a2a;
+      border-color: #6a3a3a;
+    }
+
+    .status {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      font-size: 12px;
+      color: #4caf50;
+    }
+
+    .status.paused {
+      color: #ff5722;
+    }
+
+    .status-dot {
+      width: 8px;
+      height: 8px;
+      background: #4caf50;
+      border-radius: 50%;
+      animation: pulse 2s infinite;
+    }
+
+    .status.paused .status-dot {
+      background: #ff5722;
+      animation: none;
+    }
+
+    .pending-info {
+      text-align: center;
+      font-size: 11px;
+      color: #666;
+      margin-top: 12px;
+    }
+
+    @keyframes pulse {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.5; }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1><a href="http://localhost:3000" target="_blank">Techtools</a></h1>
-        <div id="userId" class="loading">User ID: Loading</div>
+  <div class="popup-container">
+    <div class="header">
+      <h1>Magic Extension</h1>
     </div>
 
-    <script src="popup.js"></script>
+    <div class="stats">
+      <div class="stat">
+        <span class="stat-value" id="todayVisits">-</span>
+        <span class="stat-label">Today's Visits</span>
+      </div>
+      <div class="stat">
+        <span class="stat-value" id="todayTime">-</span>
+        <span class="stat-label">Time Today</span>
+      </div>
+    </div>
+
+    <div class="user-info">
+      <label>Your User ID:</label>
+      <input type="text" id="userId" readonly>
+      <button id="copyBtn" title="Copy to clipboard">Copy</button>
+    </div>
+
+    <div class="actions">
+      <a href="https://techtools.cz/tools/magic-extension/" target="_blank" class="btn btn-primary">
+        Open Dashboard
+      </a>
+      <button id="pauseBtn" class="btn btn-secondary">
+        Pause Tracking
+      </button>
+    </div>
+
+    <div class="status" id="status">
+      <span class="status-dot"></span>
+      <span id="statusText">Tracking Active</span>
+    </div>
+
+    <div class="pending-info" id="pendingInfo"></div>
+  </div>
+
+  <script src="popup.js"></script>
 </body>
 </html>
